fix: dont allow toastmasters to overflow

--- a/src/components/Page.module.css
+++ b/src/components/Page.module.css
@@ -4,6 +4,7 @@
 
 .main {
   box-sizing: border-box;
+  overflow-x: hidden;
   padding: 1.5rem 1.5rem;
   max-width: 40rem;
   width: 100%;
